2011-09-01  Adam Barth  <abarth@webkit.org>

        Remove unused "extension" parameter from rebaseline gardeningserver handler
        https://bugs.webkit.org/show_bug.cgi?id=67384

        Reviewed by James Robinson.

        This parameter hasn't done anything in a while.

        * Scripts/webkitpy/tool/commands/rebaseline.py:
        * Scripts/webkitpy/tool/servers/gardeningserver.py:
        * Scripts/webkitpy/tool/servers/gardeningserver_unittest.py:

2011-09-01  Eric Seidel  <eric@webkit.org>

        Unreviewed.

        Fix a typo in unittests.  Unfortunately fixing it
        caused several assertions.  Just disabling the test
        instead, since it was providing no value before due to the typo.

        * Scripts/webkitpy/layout_tests/port/test.py:

2011-09-01  Adam Barth  <abarth@webkit.org>

        Add a "rebaseline" button to the garden-o-matic summary page
        https://bugs.webkit.org/show_bug.cgi?id=67382

        Reviewed by Dimitri Glazkov.

        As much as we might wish folks to not rebaseline entire test groups at
        once, the truth is that doing so is a common operation.  Adding a
        button for this operation is likely to make folks happy.

        This patch also cleans up a bunch of plumbing surrounding failureInfo
        objects.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/base.js:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/base_unittests.js:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/checkout.js:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/checkout_unittests.js:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/controllers.js:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/model.js:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/results.js: